--- a/templates/patches.mustache
+++ b/templates/patches.mustache
@@ -10,7 +10,7 @@
             <span class="text">{{#str}} loading, local_securitypatcher {{/str}}.</span>
         </div>
     </div>
-    <table id="patchestable" class="table table-striped table-bordered nowrap" style="width:100%">
+    <table id="patchestable" class="table table-striped table-bordered nowrap d-none" style="width: 100%">
         <thead>
         <tr>
             <th></th>
