Fixed the datatable server side processing on filter search, added selector and datepicker to the filters

--- a/styles/patches.css
+++ b/styles/patches.css
@@ -32,6 +32,11 @@ tr.child .patch-actions-wrapper {
     flex-wrap: wrap;
 }
 
+/*DataTable Date Picker*/
+div.dt-datetime table tr th {
+    color: #fff;
+}
+
 /*Datatable Loader*/
 .datatable-loader {
     position: absolute;
