Fixed patch reports status and minor front end changes

--- a/styles/patches.css
+++ b/styles/patches.css
@@ -37,6 +37,10 @@ div.dt-datetime table tr th {
     color: #fff;
 }
 
+.dt-datetime-clear {
+    cursor: pointer;
+}
+
 /*Datatable Loader*/
 .datatable-loader {
     position: absolute;
