--- a/templates/patches.mustache
+++ b/templates/patches.mustache
@@ -1,3 +1,59 @@
+{{!
+    This file is part of Moodle - https://moodle.org/
+
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+    @template local_securitypatcher/patches
+
+    Patches List dataTable.
+
+    IDs required for JS:
+    * patchestable
+
+    Classes required for JS:
+    * table-wrapper
+    * datatable-loader
+    * datatable-loader-overlay
+    * loader
+    * text
+    * table
+
+    Data attributes required for JS:
+    * none
+
+    Context variables required for this template:
+    * filters
+        * patches
+            * status
+        * patchesreport
+            * status
+            * operation
+
+    Example context (json):
+    {
+        "filters": {
+            "patches": {
+                "status": "<select>...</select>"
+            },
+            "patchesreport": {
+                "status": "<select>...</select>",
+                "operation": "<select>...</select>"
+            }
+        }
+    }
+}}
 <div class="new-patch-btn">
     <a class="btn btn-primary" role="button" href="/local/securitypatcher/patch.php">
         {{#str}} new_patch_button, local_securitypatcher {{/str}}
